@@ -32,6 +32,9 @@
   error condition occurs.  Previous versions did not set the exit status so
   it was always zero.  Patch by Luke Weber.
 
+- Fixed a bug where searching for a relative command ignored changes to
+  ``PATH`` made in ``environment=``.  Based on a patch by dongweiming.
+
 3.3.4 (2018-02-15)
 ------------------
 
